<resources>
    <string name="app_name">开源学院</string>
    <string name="welcome">欢迎走进开源学院</string>
    <string name="author">作者：张国帅</string>
    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
    <string name="action_settings">Settings</string>
    <string name="classification">分类</string>
    <string name="search">搜索课程</string>
    <string name="myinfo_news">关注的新闻</string>
    <string name="myinfo_video">关注的直播</string>
    <string name="myinfo_music">收藏的音乐</string>
    <string name="myinfo_study">学习记录</string>
    <string name="myinfo_info">我的下载</string>
    <string name="myinfo_setting">个人中心</string>
    <string name="image_back">返回</string>
    <string name="image_tiaoZhuan">跳转</string>
    <string name="publicty_Title">我关注的课程</string>
    <string name="player_Title">课程名字</string>
    <string name="player_Details_Title">课程名字</string>
    <string name="player_Details_Status">已完结</string>
    <string name="player_Details_JieShao">云服务器 ECS (Elastic Compute Service) 是一种云计算服务，它的管理方式比物理服务器更简单高效。无需提前采购投入，您可以根据业务的需要，随时创建实例、扩容磁盘、或释放任意多台云服务器实例。</string>
    <string name="player_Details_User">用户名字</string>
    <string name="player_Details_MyJieShao">云服务器 ECS 实例（以下简称 ECS 实例）是一个虚拟的计算环境，包含 CPU、内存等最基础的计算组件，是云服务器呈献给每个用户的实际操作实体。ECS 实例是云服务器最为核心的概念，其他的资源，比如磁盘、IP、镜像、快照等，只有与 ECS 实例结合后才能使用。</string>
    <string name="player_Details_AllClass">老师的全部课程</string>
    <string name="player_Details_XiangGuangTuiJian">相关推荐</string>
    <string name="player_Down_Title">下载视频</string>
    <string name="player_Down_Ok">下载</string>
    <string name="player_Down_All">全选</string>
    <string name="player_Down_NotAll">反选</string>
    <string name="my_article_Title">我的文章</string>
    <string name="contacts_Title">好友</string>
    <string name="contacts_NewFriends">新的朋友</string>
    <string name="message_Title">我的消息</string>
    <string name="search_friends_Title">搜索好友</string>
    <string name="setting">设置</string>
    <string name="setting_User">Forever Love</string>
    <string name="setting_SheDingMuBiao">设定目标</string>
    <string name="setting_XuexiTiXing">学习提醒</string>
    <string name="setting_TuiSongTongZhi">推送通知</string>
    <string name="setting_QingChuHuanCun">清除缓存</string>
    <string name="setting_Video">允许非wifi网络播放/下载视频</string>
    <string name="setting_JingGao">请谨慎开启避免过度使用流量</string>
    <string name="setting_VideoPlay">视频自动播放</string>
    <string name="setting_YiJianFanKui">意见反馈</string>
    <string name="setting_BanBenGengXin">版本更新</string>
    <string name="setting_GeiWoPingFen">给我评分</string>
    <string name="setting_GuanYuApp">关于程序</string>
    <string name="setting_YingYongTuiJian">应用推荐</string>
    <string name="setting_TuiChu">退出登录</string>
    <string name="setting_HuanCunDaXiao">10.2MB</string>
    <string name="person_data_Title">个人资料</string>
    <string name="person_data_TouXiang">头像</string>
    <string name="person_data_ZhiYe">职业</string>
    <string name="person_data_QianMing">签名</string>
    <string name="person_data_NiCheng">昵称</string>
    <string name="person_data_XingBie">行别</string>
    <string name="person_data_DiQu">地区</string>
    <string name="person_data_BangDingShouJi">手机绑定</string>
    <string name="person_data_BangDingYouXiang">邮箱绑定</string>
    <string name="person_data_DefaultDate">未绑定</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
</resources>