<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@xml/popbackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:orientation="horizontal">

        |

        <ImageView
            style="@style/TitlebackImageView"
            android:id="@+id/play_down_back"/>

        <TextView
            style="@style/TitleTextView"
            android:text="@string/player_Down_Title" />

    </LinearLayout>

    <com.kaiyuanxueyuan.view.PinnedHeaderListView
        android:id="@+id/play_down_listView"
        android:layout_width="match_parent"
        android:divider="#00000000"
        android:layout_height="0dp"
        android:background="@null"
        android:layout_weight="1">

    </com.kaiyuanxueyuan.view.PinnedHeaderListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/play_down_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/player_Down_Ok"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/play_down_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/player_Down_All"
            android:textSize="20sp"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>